--- a/style.css
+++ b/style.css
@@ -1,36 +1,44 @@
-body {
-    background-color: darkgoldenrod;
+body{
+    background-color: darkkhaki;
 }
-p {
+
+p{
     color: antiquewhite;
     font-size: 20px;
 }
-h1 {
+
+h1{
     text-align: center;
 }
-#score {
+
+#score{
     text-align: center;
 }
-.clear {
+
+.clear{
     clear: both;
 }
-#size-bloc {
+#size-bloc{
     margin-left: -50px;
     padding-left: 50%;
 }
-#size-title {
+
+#size-title{
     float: left;
     margin-top: 0px;
 }
-#size {
+
+#size{
     width: 50px;
     margin-left: 10px;
     border-radius: 3px;
 }
-#canvas {
+
+#canvas{
     background-color: burlywood;
 }
-#canvas-bloc {
+
+#canvas-block{
     margin-left: -250px;
     padding-left: 50%;
 }
